--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "nodemon": "^2.0.20"
   },
   "dependencies": {
+    "@sinclair/typebox": "^0.25.15",
+    "ajv": "^8.11.2",
     "cookie-parser": "^1.4.6",
     "dotenv": "16.0.3",
     "express": "4.18.2",
