--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   "dependencies": {
     "@sinclair/typebox": "^0.25.15",
     "ajv": "^8.11.2",
+    "ajv-errors": "^3.0.0",
+    "ajv-formats": "^2.1.1",
     "cookie-parser": "^1.4.6",
     "dotenv": "16.0.3",
     "express": "4.18.2",
