--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "16.0.3",
     "express": "4.18.2",
     "jose": "4.11.1",
+    "mongoose": "6.8.1",
     "nanoid": "^4.0.0"
   }
 }
